#DIAM-107 Implement support of uploading multiple attachements

--- a/Resources/views/Comment/edit.html.twig
+++ b/Resources/views/Comment/edit.html.twig
@@ -60,7 +60,7 @@
                 'data': [
                     form_row(form.content),
                     attachmentListWidget,
-                    form_row(form.attachments)
+                    form_row(form.files)
                 ]
             }
         ]
