--- a/Resources/views/Ticket/attach.html.twig
+++ b/Resources/views/Ticket/attach.html.twig
@@ -41,7 +41,7 @@
             {
                 'title': 'Attachment'|trans,
                 'data': [
-                    form_row(form.file),
+                    form_row(form.files),
                 ]
             }
         ]
