--- a/Resources/views/Branch/Datagrid/Property/logo.html.twig
+++ b/Resources/views/Branch/Datagrid/Property/logo.html.twig
@@ -1,2 +1,2 @@
-{% set logoImgSrc = record.getValue('logo') ? record.getValue('logo').getPathname() : asset('bundles/eltrinodiamantedesk/img/branch-placeholder.png') %}
-<img src="{{ logoImgSrc | imagine_filter('avatar_med') }}"/>
+{% set logoImgSrc = record.getValue('logo') ? record.getValue('logo').getPathname() : 'bundles/eltrinodiamantedesk/img/branch-placeholder.png' %}
+<img src="{{ asset(logoImgSrc | imagine_filter('avatar_med')) }}"/>
