DIAM-100 Fixed error messages DIAM-116 Branch validation fixed DIAM-117 Ticket validation fixed

--- a/Resources/views/Ticket/view.html.twig
+++ b/Resources/views/Ticket/view.html.twig
@@ -94,7 +94,7 @@
         'dataId': entity.id,
         'id': 'btn-remove-account',
         'dataMessage': 'Are you sure you want to delete this ticket?'|trans,
-        'successMessage': 'Ticket deleted'|trans,
+        'successMessage': 'Ticket successfully deleted.'|trans,
         'title': 'Delete ticket'|trans,
         'label': 'Delete'|trans
         })
