DIAM-101: Description field has to have the vertical resize.

--- a/Resources/public/css/diam.css
+++ b/Resources/public/css/diam.css
@@ -90,6 +90,7 @@
 }
 
 .diam-ticket-description {
-    width:560px;
-    resize:none;
+    width:  560px;
+    height: 200px;
+    resize: vertical;
 }
