--- a/Resources/views/Branch/view.html.twig
+++ b/Resources/views/Branch/view.html.twig
@@ -25,7 +25,7 @@
         'aCss': 'no-hash remove-button',
         'dataId': entity.id,
         'id': 'btn-remove-account',
-        'dataMessage': 'Are you sure you want to delete this branch?'|trans,
+        'dataMessage': 'Are you sure you want to delete this branch with ALL its tickets? Please note that it cannot be undone!'|trans,
         'successMessage': 'Branch deleted'|trans,
         'title': 'Delete branch'|trans,
         'label': 'Delete'|trans
