--- a/Resources/views/Branch/edit.html.twig
+++ b/Resources/views/Branch/edit.html.twig
@@ -1,10 +1,9 @@
 {% extends 'OroUIBundle:actions:update.html.twig' %}
 {% form_theme form with ['OroAddressBundle:Include:fields.html.twig', 'OroFormBundle:Form:fields.html.twig', 'OroTagBundle:Form:fields.html.twig'] %}
 
-{% set editCommand = form.vars.value %}
-{% set title = 'Branch'|trans %}
-{% oro_title_set({params : {"Branch": form.vars.value.name|default('N/A')} }) %}
-{% set formAction = editCommand.id ? path('diamante_branch_update', { 'id': editCommand.id }) : path('diamante_branch_create') %}
+{% oro_title_set({params : {"%branch.name%": form.vars.value.name|default('N/A') }}) %}
+
+{% set formAction = form.vars.value.id ? path('diamante_branch_update', { 'id': form.vars.value.id }) : path('diamante_branch_create') %}
 {% block head_script %}
     {{ parent() }}
     {% block stylesheets %}
@@ -31,7 +30,8 @@
         %}
         {{ parent() }}
     {% else %}
-        {% include 'OroUIBundle::page_title_block.html.twig' %}
+        {% set title = 'oro.ui.create_entity'|trans({'%entityName%': 'Branch'|trans}) %}
+        {% include 'OroUIBundle::page_title_block.html.twig' with { title: title } %}
     {% endif %}
 {% endblock pageHeader %}
 
