--- a/Resources/views/Branch/list.html.twig
+++ b/Resources/views/Branch/list.html.twig
@@ -1,7 +1,8 @@
 {% extends 'OroUIBundle:actions:index.html.twig' %}
 {% import 'OroUIBundle::macros.html.twig' as UI %}
 {% set gridName = 'diamante-branch-grid' %}
-{% set pageTitle = 'Branches' %}
+
+{% set pageTitle = 'Branches'|trans %}
 
 {% block navButtons %}
     {{
