--- a/Resources/views/Branch/view.html.twig
+++ b/Resources/views/Branch/view.html.twig
@@ -2,7 +2,8 @@
 {% import 'OroUIBundle::macros.html.twig' as macros %}
 {% import 'OroTagBundle::macros.html.twig' as _tag %}
 {% import 'OroDataGridBundle::macros.html.twig' as dataGrid %}
-{% oro_title_set({params : {"Branch: ": entity.name|default('N/A')} }) %}
+
+{% oro_title_set({params : {"%branch.name%": entity.name|default('N/A') }}) %}
 
 {% block navButtons %}
     {{ UI.button({
