#DIAM-130 Impossible to change reporter when editing ticket

--- a/Resources/views/Ticket/update.html.twig
+++ b/Resources/views/Ticket/update.html.twig
@@ -43,6 +43,7 @@
                     form_row(form.subject),
                     form_row(form.description),
                     form_row(form.status),
+                    form_row(form.reporter),
                     form_row(form.assignee)
                 ]
             }
