#DIAM-129: Comments without attachments show empty "attachment" block

--- a/Resources/views/Ticket/view.html.twig
+++ b/Resources/views/Ticket/view.html.twig
@@ -20,14 +20,16 @@
                 </div>
                 <div class="diam-comment-meta">{{ comment.author.firstname }} {{ comment.author.lastname }} added a comment - {{ comment.createdAt|oro_format_datetime }}</div>
                 <div class="diam-comment-content">{{ comment.content }}</div>
-                <div class="diam-comment-attachments-box">
-                    <strong class="diam-comment-attachments-title">Attachments:</strong>
-                    <ul class="diam-comment-attachments unstyled">
-                        {% for attachment in comment.attachments %}
-                            <li><i class="icon-paper-clip"></i> <a class="no-hash" href="{{ path('diamante_ticket_comment_attachment_download', {'commentId': comment.id, 'attachId': attachment.id}) }}">{{ attachment.filename }}</a></li>
-                        {% endfor %}
-                    </ul>
-                </div>
+                {% if comment.attachments is not empty %}
+                    <div class="diam-comment-attachments-box">
+                        <strong class="diam-comment-attachments-title">Attachments:</strong>
+                        <ul class="diam-comment-attachments unstyled">
+                            {% for attachment in comment.attachments %}
+                                <li><i class="icon-paper-clip"></i> <a class="no-hash" href="{{ path('diamante_ticket_comment_attachment_download', {'commentId': comment.id, 'attachId': attachment.id}) }}">{{ attachment.filename }}</a></li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                {% endif %}
             </li>
         {% endfor %}
     </ol>
