--- a/Resources/views/Ticket/create.html.twig
+++ b/Resources/views/Ticket/create.html.twig
@@ -44,7 +44,7 @@
         'title' : 'Description'|trans,
         'subblocks': [
             {
-                'title' : '',
+                'title' : null,
                 'data' : [
                     form_row(form.description)
                 ]
