--- a/Resources/views/Branch/edit.html.twig
+++ b/Resources/views/Branch/edit.html.twig
@@ -57,7 +57,7 @@
         'title': 'Description'|trans,
         'subblocks': [
             {
-                'title':'',
+                'title':null,
                 'data': [
                     form_row(form.description),
                 ]
