--- a/Resources/views/Branch/view.html.twig
+++ b/Resources/views/Branch/view.html.twig
@@ -49,7 +49,6 @@
 
 {% block content_data %}
     {% set id = 'branchUpdate' %}
-    {% set branchDescription = entity.description %}
 
     {% set dataSubBlocks = [UI.attibuteRow('Name', entity.name)] %}
     {% set dataSubBlocks = dataSubBlocks|merge([UI.renderHtmlProperty('oro.tag.entity_plural_label'|trans, _tag.renderView(entity))]) %}
@@ -69,7 +68,7 @@
         'title': 'Description',
         'subblocks':[{
             'title': null,
-            'data': [UI.attibuteRow(null, entity.description)]}]
+            'data': [entity.description|escape('html')|nl2br]}]
         }]
     ) %}
 
