--- a/Resources/views/Ticket/create.html.twig
+++ b/Resources/views/Ticket/create.html.twig
@@ -33,6 +33,7 @@
                     form_row(form.branch),
                     form_row(form.subject),
                     form_row(form.status),
+                    form_row(form.files),
                     form_row(form.reporter),
                     form_row(form.assignee)
                 ]
