DIAM-149: Priorities are now operational

--- a/Resources/views/Ticket/update.html.twig
+++ b/Resources/views/Ticket/update.html.twig
@@ -44,6 +44,7 @@
                     form_row(form.description),
                     form_row(form.status),
                     form_row(form.files),
+                    form_row(form.priority),
                     form_row(form.reporter),
                     form_row(form.assignee)
                 ]
