--- a/Resources/views/Ticket/create.html.twig
+++ b/Resources/views/Ticket/create.html.twig
@@ -34,6 +34,7 @@
                     form_row(form.subject),
                     form_row(form.status),
                     form_row(form.files),
+                    form_row(form.priority),
                     form_row(form.reporter),
                     form_row(form.assignee)
                 ]
