DIAM-133 Put back part of changes which were removed by merge

--- a/Resources/views/Ticket/view.html.twig
+++ b/Resources/views/Ticket/view.html.twig
@@ -190,7 +190,7 @@
     'title': 'Description'|trans,
     'subblocks': [{
     'title': null,
-    'data': [UI.attibuteRow(null, entity.description)]
+    'data': [entity.description|escape('html')|nl2br]
     }]
     }]
     ) %}
