--- a/Resources/public/css/diam.css
+++ b/Resources/public/css/diam.css
@@ -1,9 +1,14 @@
-.diam-atachments li {
+.diam-attachments {
+
+}
+.diam-attachment {
+    float: left;
+    margin: 0 0 2em 2em;
     text-align: center;
     border: 1px #e5e5e5 solid;
     border-radius: 5px;
 }
-.diam-atachments strong {
+.diam-attachment strong {
     font-weight: normal;
     display: block;
     margin-right: 4em;
@@ -11,7 +16,34 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 }
-.diam-atachments figcaption {
+.diam-attachment figure {
+    margin: 1em;
+}
+.diam-attachment-preview {
+    white-space: nowrap;
+    font-size: 0;
+    height: 172px;
+    width: 172px;
+}
+.diam-attachment-preview:before,
+.diam-attachment-preview:after{
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 1px;
+    vertical-align: middle;
+}
+.diam-attachment-preview:before {
+    margin-left: -1px;
+}
+.diam-attachment-preview:after {
+    margin-right: -1px;
+}
+.diam-attachment img {
+    max-width: 100%;
+    max-height: 100%;
+}
+.diam-attachment figcaption {
     text-align: left;
     padding: .6em 0;
 }
