DIAM-170: Added status selection dropdown to add/edit comment page.

--- a/Resources/views/Comment/edit.html.twig
+++ b/Resources/views/Comment/edit.html.twig
@@ -51,6 +51,7 @@
                 'title': 'Comment'|trans,
                 'data': [
                     form_row(form.content),
+                    form_row(form.ticketStatus),
                     attachmentListWidget,
                     form_row(form.files)
                 ]
