--- a/Resources/public/css/diam.css
+++ b/Resources/public/css/diam.css
@@ -238,6 +238,11 @@ body {
     50% { opacity: .1; }
     100% { opacity: 1; }
 }
+@-moz-keyframes blink {
+    0% { opacity: 1; }
+    50% { opacity: .1; }
+    100% { opacity: 1; }
+}
 @-webkit-keyframes blink {
     0% { opacity: 1; }
     50% { opacity: .1; }
