--- a/Resources/views/Ticket/attachment/list.html.twig
+++ b/Resources/views/Ticket/attachment/list.html.twig
@@ -46,7 +46,9 @@
     </ul>
 </div>
 <script type="text/javascript">
-    require(['eltrinodiamantedesk/js/diam.attachments']);
+    require(['eltrinodiamantedesk/js/diam.attachments'], function(attachments){
+        attachments();
+    });
 </script>
 
 <script type="text/html" id="template-attachments">
