DIAM-56: Updated controller to return attachments list as JSON if attachment upload was performed via drag'n'drop in ticket view

--- a/Resources/views/Ticket/attachment/list.html.twig
+++ b/Resources/views/Ticket/attachment/list.html.twig
@@ -35,7 +35,7 @@
                 <form id="diam-dropzone-form" action="{{ path('diamante_ticket_create_attach_post', {'id': ticket_id}) }}" method="post" enctype="multipart/form-data">
                     <label id="diam-dropzone-label" for="diam-dropzone-file"><i class="icon-plus"></i> Drop File Here</label>
                     <span class="diam-dropzone-loader" id="diam-dropzone-loader"><i class="icon-spinner icon-spin"></i></span>
-                    <input type="hidden" name="diamante_attachment_form[_token]" value="{{ csrf_token('diamante_attachment_form') }}" />
+                    <input type="hidden" name="diamante_attachment_form[_token]" value="{{ csrf_token('attachment') }}" />
                     <input id="diam-dropzone-file" type="file" name="diamante_attachment_form[files][]" multiple />
                 </form>
             </div>
