--- a/Resources/views/Ticket/attachment/list.html.twig
+++ b/Resources/views/Ticket/attachment/list.html.twig
@@ -32,7 +32,10 @@
     {% endfor %}
         <li class="diam-dropzone" id="diam-dropzone">
             <div class="diam-dropzone-placeholder">
-                <form id="diam-dropzone-form" action="{{ path('diamante_ticket_create_attach_post', {'id': ticket_id}) }}" method="post" enctype="multipart/form-data">
+                <form id="diam-dropzone-form"
+                      action="{{ path('diamante_ticket_create_attach_post', {'id': ticket_id}) }}"
+                      data-update="{{ path('diamante_ticket_attachment_latest', {'ticketId': ticket_id}) }}"
+                      method="post" enctype="multipart/form-data">
                     <label id="diam-dropzone-label" for="diam-dropzone-file"><i class="icon-plus"></i> Drop File Here</label>
                     <span class="diam-dropzone-loader" id="diam-dropzone-loader"><i class="icon-spinner icon-spin"></i></span>
                     <input type="hidden" name="diamante_attachment_form[_token]" value="{{ csrf_token('attachment') }}" />
