DIAM-172 Add Diamante Entities to ACL DIAM-173 Cover Code with ACL Verification

--- a/Resources/views/Branch/list.html.twig
+++ b/Resources/views/Branch/list.html.twig
@@ -5,11 +5,13 @@
 {% set pageTitle = 'Branches'|trans %}
 
 {% block navButtons %}
-    {{
-        UI.addButton({
-            'path' : path('diamante_branch_create'),
-            'title' : 'Create',
-            'label' : 'Create'
-        })
-    }}
+    {% if resource_granted('CREATE', 'Entity:EltrinoDiamanteDeskBundle:Branch') %}
+        {{
+            UI.addButton({
+                'path' : path('diamante_branch_create'),
+                'title' : 'Create',
+                'label' : 'Create'
+            })
+        }}
+    {% endif %}
 {% endblock %}
