--- a/Resources/views/Branch/view.html.twig
+++ b/Resources/views/Branch/view.html.twig
@@ -6,32 +6,37 @@
 {% oro_title_set({params : {"%branch.name%": entity.name|default('N/A') }}) %}
 
 {% block navButtons %}
-    {{ UI.button({
-        'path': path('diamante_ticket_create', {'id': entity.id}),
-        'iClass': 'icon-user',
-        'title': 'Add Ticket'|trans,
-        'label': 'Add Ticket'|trans
-    }) }}
+    {% if resource_granted('CREATE', 'Entity:EltrinoDiamanteDeskBundle:Ticket') %}
+        {{ UI.button({
+            'path': path('diamante_ticket_create', {'id': entity.id}),
+            'iClass': 'icon-user',
+            'title': 'Add Ticket'|trans,
+            'label': 'Add Ticket'|trans
+        }) }}
+    {% endif %}
+    {% if resource_granted('EDIT', entity) %}
+        {{ UI.button({
+            'path': path('diamante_branch_update', {'id': entity.id}),
+            'iClass': 'icon-edit',
+            'title': 'Edit Branch'|trans,
+            'label': 'Edit'|trans
+        }) }}
+    {% endif %}
 
-    {{ UI.button({
-        'path': path('diamante_branch_update', {'id': entity.id}),
-        'iClass': 'icon-edit',
-        'title': 'Edit Branch'|trans,
-        'label': 'Edit'|trans
-    }) }}
-
-    {{ UI.deleteButton({
-        'dataUrl': path('diamante_branch_delete', {'id': entity.id}),
-        'dataRedirect': path('diamante_branch_list'),
-        'aCss': 'no-hash remove-button',
-        'dataId': entity.id,
-        'id': 'btn-remove-account',
-        'dataMessage': 'Are you sure you want to delete this branch with ALL its tickets? Please note that it cannot be undone!'|trans,
-        'successMessage': 'Branch deleted'|trans,
-        'title': 'Delete branch'|trans,
-        'label': 'Delete'|trans
-        })
-    }}
+    {% if resource_granted('DELETE', entity) %}
+        {{ UI.deleteButton({
+            'dataUrl': path('diamante_branch_delete', {'id': entity.id}),
+            'dataRedirect': path('diamante_branch_list'),
+            'aCss': 'no-hash remove-button',
+            'dataId': entity.id,
+            'id': 'btn-remove-account',
+            'dataMessage': 'Are you sure you want to delete this branch with ALL its tickets? Please note that it cannot be undone!'|trans,
+            'successMessage': 'Branch deleted'|trans,
+            'title': 'Delete branch'|trans,
+            'label': 'Delete'|trans
+            })
+        }}
+    {% endif %}
 {% endblock navButtons %}
 
 {% block pageHeader %}
